<resources>
    <string name="prova">Prova</string>
    <string name="app_name">IIS A. Badoni</string>
    <string name="search_title">Cerca</string>
    <string name="search_hint">Cerca..</string>
    <string name="settings">Settings</string>
    <string name="impostazioni">Settings</string>
    <string name="title_activity_circolare">Circolare</string>
    <string name="title_informazioni">Istituto di Istruzione Superiore \n\'A. Badoni\'</string>
    <string name="logo_desc">logo_badoni</string>
    <string name="developerstitle">Sviluppata da:</string>
    <string name="developers">Tosetti Lorenzo\nPiazza Giorgio</string>
    <string name="developerstitle2">In collaborazione con:</string>
    <string name="collaborators">Ravasio Andrea\nRusconi Jordi</string>
    <string name="copyright">© 2016 I.I.S. A. Badoni</string>
    <string name="rights">All rights reserved</string>
    <string name="drawer_title">lcis00900x@istruzione.it</string>
    <string name="drawer_student">Studenti</string>
    <string name="drawer_genitori">Genitori</string>
    <string name="drawer_docenti">Docenti</string>
    <string name="drawer_personaleata">Personale ATA</string>
    <string name="drawer_settings">Impostazioni</string>
    <string name="drawer_info">Informazioni</string>
    <string name="drawer_sito">Sito Badoni</string>
    <string name="drawer_registro">Registro elettronico</string>
    <string name="drawer_orario">Orario Lezioni</string>
    <string name="linkElettronico">linkElettronico</string>
    <string name="linkSito">linkSito</string>
    <string name="navigation_drawer_open">Apri navigation drawer</string>
    <string name="navigation_drawer_close">Chiudi navigation drawer</string>
    <string name="title_activity_settings">SettingsProva</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_orario_prova">OrarioProva</string>
</resources>