<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.gov.iisbadoni.iisabadoni.Informazioni" >

    <TextView
        android:id="@+id/textInformazioni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="6dp"
        android:text="@string/title_informazioni"
        android:textSize="20sp"
        android:textColor="#212121"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInformazioni"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="12sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/logobadoni"
        android:contentDescription="@string/logo_desc" />

    <TextView
        android:id="@+id/titledevelopers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/developerstitle"
        android:textSize="17sp"
        android:textColor="#212121"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/logo" />

    <TextView
        android:id="@+id/developers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:textSize="14sp"
        android:textColor="#212121"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:layout_below="@id/titledevelopers" />

    <!--<TextView
        android:id="@+id/titledevelopers2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/developerstitle2"
        android:textSize="17sp"
        android:textColor="#212121"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/developers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/collaborators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collaborators"
        android:textSize="14sp"
        android:textColor="#212121"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/titledevelopers2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />-->

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_above="@+id/rights" />

    <TextView
        android:id="@+id/rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="16dp"
        android:text="@string/rights"
        android:textSize="12sp"
        android:textAlignment="center" />
</RelativeLayout>
